--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+  <title>Video Page</title>
 </head>
 
 <body>
@@ -15,6 +15,3 @@
 </body>
 
 </html>
-
-<!-- https://www.googleapis.com/youtube/v3/playlistItems?part=snippet,contentDetails,status&playlistId=UUMUnInmOkrWN4gof9KlhNmQ&key=AIzaSyD9nxteEDV5z9kU7PapG2S8G4ORz3fjIzM&maxResults=20 -->
-<!-- https://www.googleapis.com/youtube/v3/search?part=snippet&q=apple&key=AIzaSyD9nxteEDV5z9kU7PapG2S8G4ORz3fjIzM&type=video&maxResults=20 -->
